--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -17,9 +17,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="../css/site.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com"> 
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,500;1,300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,500;1,300&display=swap"
+    rel="stylesheet">
   <link href="../../libs/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
@@ -64,6 +65,17 @@
     <div class="row">
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail mra-portfolio-card">
+          <a href="portfolio/redhat.html" class="">
+            <img class="image-border" src="../images/redhat_thumbnail.png" alt="">
+            <div class="caption">
+              <h4 class="text-center">Red Hat Marketplace</h4>
+              <p>A marketplace for viewing and purchasing OpenShift compatible software</p>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail mra-portfolio-card">
           <a href="portfolio/lxcm.html" class="">
             <img src="../images/lxcm_thumbnail.png" alt="">
             <div class="caption">
@@ -86,6 +98,17 @@
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail mra-portfolio-card">
+          <a href="portfolio/vx.html" class="">
+            <img class="image-border" src="../images/vx_thumbnail.png" alt="">
+            <div class="caption">
+              <h4 class="text-center">Lenovo VX Installer</h4>
+              <p>A tool for automating your vCenter deployments</p>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail mra-portfolio-card">
           <a href="portfolio/fsmmobile.html" class="">
             <img src="../images/fsm_thumbnail.png" alt="">
             <div class="caption">
@@ -95,10 +118,44 @@
           </a>
         </div>
       </div>
+
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail mra-portfolio-card">
+          <a href="portfolio/maas.html" class="">
+            <img class="image-border" src="../images/maas_thumbnail.png" alt="">
+            <div class="caption">
+              <h4 class="text-center">Lenovo MaaS Prototype</h4>
+              <p>Brainstorming mangement software for a hybrid data center </p>
+            </div>
+          </a>
+        </div>
+      </div>
     </div>
 
     <h3 class="portfolio-header">PERSONAL PROJECTS</h3>
     <div class="row">
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail mra-portfolio-card">
+          <a href="portfolio/aspire.html" class="">
+            <img class="image-border" src="../images/aspire_thumbnail.png" alt="">
+            <div class="caption">
+              <h4 class="text-center">Aspire Budgeting</h4>
+              <p>A budgeting tool with a design focus built in Google Sheets</p>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail mra-portfolio-card">
+          <a href="portfolio/steadfast.html" class="">
+            <img class="image-border" src="../images/steadfast_thumbnail.png" alt="">
+            <div class="caption">
+              <h4 class="text-center">Bible Memorization App</h4>
+              <p>A side project to aide in scripture memorization (available to preview)</p>
+            </div>
+          </a>
+        </div>
+      </div>
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail mra-portfolio-card">
           <a href="portfolio/cordova-ssl.html" class="">
@@ -116,7 +173,7 @@
             <img src="../images/guidelines_thumbnail.png" alt="">
             <div class="caption">
               <h4 class="text-center">Design Guidelines</h4>
-              <p>A culmination of my design fundamentals, ideologies, and processes</p>
+              <p>Notes on my design fundamentals, ideologies, and processes for this site</p>
             </div>
           </a>
         </div>
