--- a/views/portfolio/fsmmobile.html
+++ b/views/portfolio/fsmmobile.html
@@ -101,10 +101,10 @@
           app, would allow the user to group Chassis together and toggle the view to view chassis with a certain tag.</p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/chassis_list_old.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/chassis_list_old.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/chassis_list_new.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/chassis_list_new.png" alt="" />
       </div>
     </div>
     <br>
@@ -117,10 +117,10 @@
           view of the chassis which includes components such as Switches, Fans, CMMs, and Power Supplies.</p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/map_old.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/map_old.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/map_new.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/map_new.png" alt="" />
       </div>
     </div>
     <br>
@@ -133,10 +133,10 @@
           list of actions that can be performed against the component being viewed.</p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/actions_old.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/actions_old.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/actions_new.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/actions_new.png" alt="" />
       </div>
     </div>
     <br>
@@ -149,10 +149,10 @@
         </p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/details_old.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/details_old.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/details_new.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/details_new.png" alt="" />
       </div>
     </div>
     <br>
@@ -166,10 +166,10 @@
         </p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/settings_old.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/settings_old.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/settings_new.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/settings_new.png" alt="" />
       </div>
     </div>
     <br>
@@ -182,23 +182,23 @@
         </p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/login_old.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/login_old.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/login_new.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/login_new.png" alt="" />
       </div>
     </div>
     <br>
     <div class="row">
       <h3> ADDITIONAL PAGES </h3>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/gallery1.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/gallery1.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/gallery2.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/gallery2.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="570" width="323" src="../../images/fsmmobile/gallery3.png" alt="" />
+        <img class="img-shadow"  height="570" width="323" src="../../images/fsmmobile/gallery3.png" alt="" />
       </div>
     </div>
   </div>
