--- a/views/portfolio/lxcm.html
+++ b/views/portfolio/lxcm.html
@@ -76,7 +76,7 @@
       <h3> MY ROLE </h3>
       <div class="col-md-12">
         <p>
-          As the Lead Software Engineer on this team, my responsibilities included:
+          As the Lead Software Engineer and UX Designer on this team, my responsibilities included:
         </p>
         <ul>
           <li>Writing JavaScript code with the AngularJS and Ionic frameworks</li>
@@ -95,7 +95,18 @@
     </div>
 
     <br>
-
+    <div class="row">
+      <h3> WIREFRAMES & USER FLOW </h3>
+      <div class="col-md-12">
+        <p>
+          As we grew the product's features, I kept a document for the user's flow through the app as well as basic wireframes for new features (open in new tab for fullsize version).
+        </p>
+      </div>
+      <div class="col-md-12">
+        <img class="img-responsive img-shadow" src="../../images/lxcm/master.png" alt="" />
+      </div>
+    </div>
+    <br>
     <div class="row">
       <h3> NEWSFEED </h3>
       <div class="col-sm-12 col-md-4">
@@ -105,10 +116,10 @@
         </p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/ios_newsfeed.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/ios_newsfeed.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/android_newsfeed.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/android_newsfeed.png" alt="" />
       </div>
     </div>
     <br>
@@ -121,10 +132,10 @@
           determine more about their hardware health and inventory details.</p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/ios_hardware.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/ios_hardware.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/android_hardware.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/android_hardware.png" alt="" />
       </div>
     </div>
     <br>
@@ -137,10 +148,10 @@
         </p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/ios_monitoring.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/ios_monitoring.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/android_monitoring.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/android_monitoring.png" alt="" />
       </div>
     </div>
     <br>
@@ -154,10 +165,10 @@
         </p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/ios_chassis.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/ios_chassis.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/android_chassis.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/android_chassis.png" alt="" />
       </div>
     </div>
     <br>
@@ -173,10 +184,10 @@
         </p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/ios_rack.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/ios_rack.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/android_rack.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/android_rack.png" alt="" />
       </div>
     </div>
     <br>
@@ -191,10 +202,10 @@
         </p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/ios_power.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/ios_power.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/android_power.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/android_power.png" alt="" />
       </div>
     </div>
     <br>
@@ -208,10 +219,10 @@
         </p>
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/ios_list.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/ios_list.png" alt="" />
       </div>
       <div class="col-sm-6 col-md-4">
-        <img height="552" width="322" src="../../images/lxcm/android_list.png" alt="" />
+        <img class="img-shadow"  height="552" width="322" src="../../images/lxcm/android_list.png" alt="" />
       </div>
     </div>
   </div>
