--- a/views/portfolio/lxca.html
+++ b/views/portfolio/lxca.html
@@ -71,6 +71,7 @@
         </p>
       </div>
     </div>
+    
 
     <div class="row">
       <h3> MY ROLE </h3>
@@ -88,8 +89,6 @@
       </div>
     </div>
 
-    <br>
-
     <div class="row">
       <h3> LOGIN </h3>
       <div class="col-md-12">
@@ -99,7 +98,7 @@
           energizing, and professional login page for this application.</p>
       </div>
       <div class="col-md-12">
-        <img class="img-responsive" src="../../images/lxca/login.png" alt="" />
+        <img class="img-responsive img-shadow" src="../../images/lxca/login.png" alt="" />
       </div>
     </div>
 
@@ -115,9 +114,11 @@
           in an informed manner.</p>
       </div>
       <div class="col-md-12">
-        <img class="img-responsive" src="../../images/lxca/dashboard.png" alt="" />
+        <img class="img-responsive img-shadow" src="../../images/lxca/dashboard.png" alt="" />
       </div>
     </div>
+
+    <br>
 
     <div class="row">
       <h3> HARDWARE LIST </h3>
@@ -128,7 +129,7 @@
           quick filter which allows the user to sift through large datasets easily.</p>
       </div>
       <div class="col-md-12">
-        <img class="img-responsive" src="../../images/lxca/servers.png" alt="" />
+        <img class="img-responsive img-shadow" src="../../images/lxca/servers.png" alt="" />
       </div>
     </div>
 
@@ -143,7 +144,7 @@
         </p>
       </div>
       <div class="col-md-12">
-        <img class="img-responsive" src="../../images/lxca/details.png" alt="" />
+        <img class="img-responsive img-shadow" src="../../images/lxca/details.png" alt="" />
       </div>
     </div>
 
@@ -158,7 +159,7 @@
           to help construct the UI in a clear and organized hierarchy.</p>
       </div>
       <div class="col-md-12">
-        <img class="img-responsive" src="../../images/lxca/patterns.png" alt="" />
+        <img class="img-responsive img-shadow" src="../../images/lxca/patterns.png" alt="" />
       </div>
     </div>
 
@@ -173,7 +174,7 @@
           use of a Mega Menu enables users to reach their intended destinations in just a few clicks.</p>
       </div>
       <div class="col-md-12">
-        <img class="img-responsive" src="../../images/lxca/navigation.png" alt="" />
+        <img class="img-responsive img-shadow" src="../../images/lxca/navigation.png" alt="" />
       </div>
     </div>
 </body>
